# Typingo-API

./: .env.example  .gitignore  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
archieve/: translation.py
routers/: users.py
src/: main.py  test.py  test_boundaries.py
src/auth/: config.py  dependencies.py  jwt_utils.py  supabase_client.py
src/fap/: main.py
src/fap/asr/: __init__.py  adapter.py  base.py  engine.py  factory.py  google_engine.py  whisper_engine.py
src/fap/routers/: websocket.py
src/fap/utils/: globalAccumulator.py  segmentManager.py
src/routers/: __init__.py  auth.py  websocket.py
src/routers/stt/: __init__.py  assemblyai.py  deepgram.py  elevenlabs.py  elevenlabsTest.py  speechmatics.py  speechmaticsTest.py
src/routers/test/: translation.py
src/utils/: combiner.py  embeddings.py  languages.py  speaker_pipeline.py  tone.py  translation.py  translationExp.py  translationTest.py  translation_deepl.py  translation_realtime.py
